--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,11 @@
 /storage/*
 !/storage/.keep
 
+
 .byebug_history
+
+# Ignore Secret yml file
+/config/secrets.yml
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
